@@ -1,5 +1,6 @@
 # Copyright 2000-2002 Daniel Robbins, Gentoo Technologies, Inc.
 # Contains local system settings for Portage system
+# Please review 'man make.conf' for more information.
 
 # Build-time functionality
 # ========================
